<resources>
    <string name="app_name">Vastra</string>
    <string name="welcome_title">Welcome to Vastra</string>
    <string name="welcome_msg">Be uniquely styled by Fashion Designers</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_account">Create Account</string>
    <string name="login_msg">Login to continue</string>
    <string name="label_email_verification">Verify Your Email</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_province">Province</string>
    <string name="label_city">City</string>
    <string name="link_forgot_password">Forgot password?</string>
    <string name="get_started">Get Started</string>
    <string name="hint_register_choose_role">Start by choosing your role.</string>
    <string name="role_fashion_designer">I\'m a Fashion Designer</string>
    <string name="role_fashion_designer_desc">Meet shoppers, sell your unique designed clothes and accessories and take your career or business to the next heights.</string>
    <string name="role_shopper">I\'m a Shopper</string>
    <string name="role_shopper_desc">Find and buy unique collection of clothes or accessories, interact with fashion designers and get customized apparels of your choice.</string>
    <string name="signup_msg">Signup to continue</string>
    <string name="email_verification_msg">Please enter the 4 digit code sent to your email address.</string>
    <string name="btn_next">Next</string>
    <string name="label_code">4 Digit Code</string>
    <string name="btn_verify"><![CDATA[Verify & Proceed]]></string>
    <string name="link_resend_code">Resend Code</string>
    <string name="link_did_not_received_code">Didn\'t receive code?</string>
    <string name="label_email_msg">Enter your email</string>
    <string name="email_confirmation_msg">We will send you a confirmation code</string>
    <string name="registration_msg">Let us know about you</string>
    <string name="dialog_province_msg">Select Province</string>
    <string name="ok">OK</string>
    <string name="btn_back">back</string>
    <string name="todo">Not implemented yet.</string>
    <string name="error_empty_email">Please enter your email address.</string>
    <string name="error_invalid_email">Please enter valid email address.</string>
    <string name="error_empty_first_name">Plese enter your first name.</string>
    <string name="error_empty_last_name">Please enter your last name.</string>
    <string name="error_empty_password">Please enter password.</string>
    <string name="error_empty_province">Please select province</string>
    <string name="error_empty_city">Please enter city name.</string>
    <string name="error_empty_address">Please enter address.</string>
    <string name="error_empty_postal_code">Please enter postal code.</string>
    <string name="error_invalid_postal_code">Please enter valid postal code.</string>
    <string name="error_server">Something went wrong!</string>
</resources>