<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/parentLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:background="?selectableItemBackground"
        android:padding="8dp"
        android:src="@drawable/ic_back_gray_500_24dp"
        app:tint="@color/primary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/label_email_verification"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/text_primary_black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/email_verification_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/text_secondary_black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutVerificationCode"
            style="@style/Vastra.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/label_code">

            <EditText
                android:id="@+id/inputVerificationCode"
                style="@style/Vastra.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/btnVerify"
            style="@style/Vastra.Button.Filled"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/btn_verify" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/linkDidNotReceivedCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/link_did_not_received_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/linkResendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:textStyle="bold"
                android:text="@string/link_resend_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/primary" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>